--- a/package.json
+++ b/package.json
@@ -36,14 +36,20 @@
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
+    "rand-user-agent": "^2.0.20",
     "random-number": "0.0.9",
+    "random-useragent": "^0.5.0",
     "socket.io": "^4.7.0",
     "sqlite3": "^5.1.6",
+    "swagger-autogen": "^2.23.4",
+    "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0",
-    "whatsapp-web.js": "^1.21.0"
+    "whatsapp-web.js": "^1.21.0",
+    "winston": "^3.9.0"
   }
 }
