--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
+    "knex-paginate": "^3.1.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.2",
